[project]
name = "browserbench"
version = "0.1.0"
description = "Browser benchmark tool for testing the Intuned stealth Chromium against autonomous web-browsing tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "browser-use",
    "requests",
]

[project.scripts]
browserbench = "run_browserbench:main"
browser-test = "browser_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]

